--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "crypto-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "Electron Bitcoin price alert app",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
+    "package-win": "electron-packager . crypto-app --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"CryptoApp\"",
+    "package-linux": "electron-packager . crypto-app --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/images/btn.png --prune=true --out=release-builds"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "7.1.8"
+    "electron": "7.1.8",
+    "electron-packager": "^14.2.0"
   },
   "dependencies": {
     "axios": "^0.19.1"
